# data-request-manager

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml  rebuild-db.py
backend/core/: __init__.py  data_request.py  database.py  repository.py
backend/core/auth/: __init__.py  backend.py  database.py  manager.py  models.py  schemas.py  users.py
backend/core/data_request/: __init__.py  data_request.py  data_request_model.py  data_request_repo.py  data_request_service.py
backend/core/person/: __init__.py  person.py  person_model.py  person_repo.py
backend/core/request_source/: __init__.py  request_source.py  request_source_model.py  request_source_repo.py
backend/data/: data_requests.json  people.json  request_sources.json
backend/db/: flyway.conf  seed.py  setup_db.sql
backend/db/migrations/: V20251121001__create_tables.sql  V20251123001__create_user_table.sql
backend/tests/: test_auth.py  test_data_request.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_data_request_service.py
bruno/: Get DataRequests Status filter.bru  Get DataRequests.bru  bruno.json
docs/: data-request-manager.drawio  prod.drawio
docs/adr/: 001-database-access-library.md  002-sqlalchemy-standardization.md
infra/: README.md  clean_aws_env.sh  deploy-frontend.sh  main.tf  outputs.tf  variables.tf
infra/ansible/: ansible.cfg  inventory.yml.tpl  playbook.yml
infra/backend/: main.tf  outputs.tf  variables.tf
infra/ui/: main.tf  outputs.tf
ui/: README.md  index.html  package.json  pnpm-lock.yaml
(+19 files in other folders)
